--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
         </div>
         <div class="col-12 col-sm-4 col-md-6 col-lg-3 py-3">
           <h5 class="pb-3">Customer care</h5>
-          <p>Regular</p>
-          <p>On Time</p>
-          <p>Always Care</p>
+          <p>Support</p>
+          <p>Rise Ticket</p>
+          <p>FAQ</p>
         </div>
         <div class="col-12 col-sm-4 col-md-6 col-lg-3 py-3 icons">
           <h5 class="pb-3">Customer care</h5>
